--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,10 @@
 {
-  "name": "composer/lc-test",
+  "name": "lc-composer/test",
   "type": "project",
-  "description": "lc-test",
+  "description": "test",
   "autoload": {
     "psr-4": {
       "App\\": "App/"
     }
-  },
-  "repositories": [
-    {"type": "composer", "url": "http://192.168.80.50:31110/artifactory/api/composer/fufaquan-php-remote"},
-    {"packagist": false}
-  ],
-  "config": {
-    "secure-http" : false
-  },
-  "require": {
-    "php": ">=5.3.7",
-    "composer/test": "3.0.0"
   }
 }
