--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "lc-composer/test",
   "type": "project",
+  "version": "1.0.0",
   "description": "test",
   "autoload": {
     "psr-4": {
